// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Variants component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input-group"
  >
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="upload-21"
        >
          Variant #1
        </label>
        <react-dropzone
          accepts={
            Object {
              "accepts": null,
              "extensions": null,
            }
          }
          className="form-dropzone style-square"
          inputProps={
            Object {
              "aria-describedby": "upload-error-22",
              "id": "upload-21",
            }
          }
          multiple={false}
          onDrop={[Function]}
          style={undefined}
        >
          <div
            className="contents-empty"
          >
            <i
              aria-hidden="true"
              className="manicon manicon-cloud-up"
            />
            <div
              className="message"
            >
              <p
                className="primary"
              >
                <span
                  className="fake-link"
                  role="button"
                  tabIndex="0"
                >
                  Upload a file
                </span>
                 or 
                <br />
                drag and drop here
                <br />
              </p>
            </div>
          </div>
        </react-dropzone>
      </div>
    </div>
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label
          className=""
          htmlFor="upload-21"
        >
          Variant #2
        </label>
        <react-dropzone
          accepts={
            Object {
              "accepts": null,
              "extensions": null,
            }
          }
          className="form-dropzone style-square"
          inputProps={
            Object {
              "aria-describedby": "upload-error-22",
              "id": "upload-21",
            }
          }
          multiple={false}
          onDrop={[Function]}
          style={undefined}
        >
          <div
            className="contents-empty"
          >
            <i
              aria-hidden="true"
              className="manicon manicon-cloud-up"
            />
            <div
              className="message"
            >
              <p
                className="primary"
              >
                <span
                  className="fake-link"
                  role="button"
                  tabIndex="0"
                >
                  Upload a file
                </span>
                 or 
                <br />
                drag and drop here
                <br />
              </p>
            </div>
          </div>
        </react-dropzone>
      </div>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is image renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-21"
      >
        High Resolution Image
      </label>
      <react-dropzone
        accepts={
          Object {
            "accepts": "image/*",
            "extensions": "gif, jpeg, jpg, png",
          }
        }
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-22",
            "id": "upload-21",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-21"
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accepts={
          Object {
            "accepts": "image/*",
            "extensions": "gif, jpeg, jpg, png",
          }
        }
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-22",
            "id": "upload-21",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Variants component when kind is pdf renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
        htmlFor="upload-21"
      >
        Thumbnail Image
      </label>
      <react-dropzone
        accepts={
          Object {
            "accepts": "image/*",
            "extensions": "gif, jpeg, jpg, png",
          }
        }
        className="form-dropzone style-square"
        inputProps={
          Object {
            "aria-describedby": "upload-error-22",
            "id": "upload-21",
          }
        }
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
                tabIndex="0"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              gif, jpeg, jpg, png
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;
